syntax = "proto3";

package kafka;

option go_package = "specommerce/orderservice/model";
import "google/protobuf/timestamp.proto";

message ProcessPaymentRequest {
  string order_id = 1;
  string customer_id = 2;
  double total_amount = 3;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string customer_id = 3;
  double total_amount = 4;
  string payment_status = 5;
}

message Order{
  string id = 1;
  string customer_id = 2;
  string customer_name = 3;
  double total_amount = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
